# darknet

./: .gitignore  README.md
src/: CMakeLists.txt  YOLODetector.cpp  YOLODetector.hpp  cuda.h  darknet.c  main.cpp  network.h  network_kernels.cu  yolo_console_dll.cpp  yolo_v2_class.cpp  yolo_v2_class.hpp
